test/parser/error/err_06_const_val_missing.pl0
program p; 
const x := ; 
begin 
end